--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "mongoose": "^4.3.7",
+    "nodemailer": "^2.1.0",
+    "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
